Add separate functions for controlling auto rotate interval; Reorg methods into public/private notation

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </div>
 
       <div class="example" style="width: 400px;">
-        <h4>Finite carousel with pagination and grouping</h4>
+        <h4>Carousel with custom before/after slide change functions</h4>
         <p>Specify a function to be called before a slide change happens, and one for after the slide change is finished.</p>
         <ul id="carouselWithCallbacks" class="carousel">
           <li>
