--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   
-  <link rel="stylesheet" href="_ui/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
-  <script src="_ui/js/lib/modernizr-2.5.3.js"></script>
+  <script src="js/lib/modernizr-2.5.3.js"></script>
 
 </head>
 
@@ -196,8 +196,8 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
 
-  <script src="_ui/js/lib/jquery.easing.1.3.js"></script>
-  <script src="_ui/js/carousel.js"></script>
+  <script src="js/lib/jquery.easing.1.3.js"></script>
+  <script src="js/carousel.js"></script>
 
   <script>
     $(function(){
